--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <canvas id="bg"></canvas>
+    <h3 className="score">Score:</h3>
+    <div className="scoreDisplay"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
