--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <canvas id="bg"></canvas>
     <h3 className="score">Score:</h3>
     <div className="scoreDisplay"></div>
+    <h4>Arrow Key Control, Catch Red, Avoid Blue</h2>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
