--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <canvas id="bg"></canvas>
     <h3 className="score">Score:</h3>
     <div className="scoreDisplay"></div>
-    <h4>Arrow Key Control, Catch Red, Avoid Blue</h2>
+    <h4>Arrow Key Control, Catch Red and Yellow # Avoid Blue</h4>
+    
     <script type="module" src="/main.js"></script>
   </body>
 </html>
